Fix for About page headers being off-center

--- a/css/style_main.css
+++ b/css/style_main.css
@@ -226,6 +226,7 @@ a:hover {
 	height: 110px;
 	padding-top: 0px;
 	padding-bottom: 0px;
+	text-align: center;
 }
 
 .page_contents h1 {
